Update config + docs

--- a/readme.org
+++ b/readme.org
@@ -41,6 +41,19 @@ First [[https://zmk.dev/docs/development/setup][set up the ZMK build environment
 
 Clone this repository and set [[https://zmk.dev/docs/development/build-flash#building-from-zmk-config-folder][ZMK_CONFIG]] to the absolute path of the [[config]] subdirectory.  Use the [[#config-file][config file]] to select alternative layout and mapping options.
 
+**** Note to Self
+
+Local builds are done via the CLI, from the '~/git/zmk/app' folder, with the following commands:
+
+#+begin_src 
+cd ~/git/zmk/app
+west build -d build/left -b nice_nano_v2 -- -DSHIELD=kyria_rev2_left -DZMK_CONFIG="/Users/evie/git/miryoku_zmk/config" # Outputs to ~/git/zmk/app/build/left
+west build -d build/right -b nice_nano_v2 -- -DSHIELD=kyria_rev2_right -DZMK_CONFIG="/Users/evie/git/miryoku_zmk/config" # Outputs to ~/git/zmk/app/build/right
+#+end_src
+
+Once the files have been output, double press the power button on each half to put them in update mode, then copy '~/git/zmk/app/build/[left/right]/zephyr/zmk.uf2' into the mounted drives.
+
+Changes are done by updating the various files in '~/git/miryoku_zmk', as described in the rest of the README. 
 
 *** Workflow Builds
 
