--- a/config.org
+++ b/config.org
@@ -138,7 +138,7 @@ CONFIG_ZMK_PM_SOFT_OFF=y
 This section contains more information on building the ~.uf2~ files that are flashed to the micro-controllers.
 
 #+BEGIN_QUOTE
-NOTE: If running on EvieMacStudio, the ZMK Build Environment is already setup, however, instructions can be found in [[file:readme.org::*Local Builds][readme.org:Local Builds]], if needed.
+NOTE: If running on ~EvieMacStudio~, the ZMK Build Environment is already setup, however, instructions can be found in [[file:readme.org::*Local Builds][readme.org:Local Builds]], if needed.
 #+END_QUOTE
 
 #+name: Local Builds
